home-cluster/quotes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quotes-app
  namespace: quotes
spec:
  selector:
    app: quotes-app
  ports:
  - port: 8000
    targetPort: 8000
